moneypacket.org
Digital envelopes for bitcoin, no trusted third parties.

06/26/2015
moneypacket.org-v0.1
- Initial release

07/10/2015
moneypacket.org-v0.2
- Completely re-built to guide user through process
- Create a new money packet
- Import an existing money packet
- Withdraw to new money packet
- Withdraw to bitcoin address
- Add funds to existing money packet

07/12/2015
moneypacket.org-v0.21
- clarified terminology around claiming vs sending vs receiving
- moved transaction fee notice out of confirmation dialog
- added notice that local currencies will fluctuate against market price of bitcoin
- recommended Copay on claim to bitcoin address page