@@ -34,7 +34,7 @@
 				<div id="center_div">
 				
 					<!-- Background -->
-					<!-- <div id="background_page" class="page"></div> -->
+					<div id="background_page" class="page"></div>
 				
 					<!-- Home page -->
 					<div id="home_page" class="page">
@@ -46,7 +46,7 @@
 								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">This website is free, open source, and 100% client-side; I am not a trusted third party.</span><br>
 								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">Recipients don't need a bitcoin wallet to receive funds.</span><br>
 								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">Senders can re-claim funds until the receiver claims them.</span><br>
-								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">All funds are password-protected by a password you create.</span><br>
+								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">All funds are protected by a password which you create.</span><br>
 								<span class="checkmark_line"><img class="checkmark" src="img/checkmark.png">No account sign up.</span><br>
 							</div>
 							<div>&nbsp;</div>
