@@ -20,3 +20,4 @@ moneypacket.org-v0.21
 - moved transaction fee notice out of confirmation dialog
 - added notice that local currencies will fluctuate against market price of bitcoin
 - recommended Copay on claim to bitcoin address page
+- added background image for bling
